User profile image non mandatory impl. Missing media cover image impl